projeto quase finalizado

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div>
-        <img src="foto pk 88x88.jpg" alt="foto do rosto do pedro kayke">
-
+        <img src="kayke.jpg" alt="">
         <h1>pedro kayke</h1>
 
         <strong>São Paulo, Brasil</strong>
